premiers essais envoie d'email

--- a/ios/AwesomeProject/Info.plist
+++ b/ios/AwesomeProject/Info.plist
@@ -20,11 +20,15 @@
 	<string>1.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>NSContactsUsageDescription</key>
+	<string>YOUR TEXT</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
+	<key>NSContactsUsageDescription</key>
+	<string>CONTACTS</string>
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
