--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,10 +1,15 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
+
 platform :ios, '11.0'
 
 target 'AwesomeProject' do
   config = use_native_modules!
+
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  pod 'Permission-Contacts', :path => "#{permissions_path}/Contacts"
+
 
   use_react_native!(
     :path => config[:reactNativePath],
