--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react": "17.0.2",
     "react-native": "0.66.3",
     "react-native-dotenv": "^3.3.0",
+    "react-native-email": "^1.1.0",
+    "react-native-email-link": "^1.12.2",
     "react-native-keyboard-spacer": "^0.4.1",
+    "react-native-permissions": "^3.1.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0"
   },
