--- a/ios/Podfile
+++ b/ios/Podfile
@@ -9,6 +9,7 @@ target 'AwesomeProject' do
 
   permissions_path = '../node_modules/react-native-permissions/ios'
   pod 'Permission-Contacts', :path => "#{permissions_path}/Contacts"
+  pod 'XCDYouTubeKit', '~> 2.8'
 
 
   use_react_native!(
