--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "react-native-keyboard-spacer": "^0.4.1",
     "react-native-permissions": "^3.1.0",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.9.0"
+    "react-native-screens": "^3.9.0",
+    "react-native-webview": "^11.15.0",
+    "react-native-youtube": "^2.0.2",
+    "react-native-youtube-iframe": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
